# malwi

./: .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  Dockerfile.test-matrix  LICENSE  MANIFEST.in  Makefile  README.md  RESEARCH.md  docker-compose.test.yml  pyproject.toml  setup.py  version.toml
agent/: Cargo.toml  build.rs
agent/benches/: filter.rs
agent/src/: envvar_filter.rs  exec_filter.rs  fork_monitor.rs  glob.rs  hooks.rs  http_client.rs  lib.rs  spawn_monitor.rs  syscall_monitor.rs  test_utils.rs
agent/src/bash/: detect.rs  hooks.rs  mod.rs  structs.rs
agent/src/cpython/: audit.rs  ffi.rs  filters.rs  format.rs  helpers.rs  mod.rs  profile.rs  stack.rs  version.rs
agent/src/exec/: fork.rs  mod.rs  spawn.rs
agent/src/native/: format.rs  hooks.rs  mod.rs  symbol.rs
agent/src/nodejs/: bytecode.rs  codegen.rs  detect.rs  ffi.rs  filters.rs  mod.rs  script.rs  stack.rs
agent/src/nodejs/addon/: callback.rs  embed.rs  ffi.rs  loader.rs  mod.rs
agent/src/python/: audit.rs  detect.rs  ffi.rs  filters.rs  helpers.rs  hooks.rs  mod.rs  profile.rs  stack.rs
agent/src/syscall/: mod.rs
agent/src/tracing/: event.rs  filter.rs  format.rs  mod.rs  stack.rs  thread.rs
cli/: Cargo.toml  build.rs
cli/benches/: symbol_resolver.rs  throughput.rs
cli/src/: agent_server.rs  agent_tracker.rs  auto_policy.rs  command_analysis.rs  config.rs  default_policy.rs  embedded_agent.rs  lib.rs  main.rs  monitor.rs  native_spawn.rs  policy_bridge.rs  shell_format.rs  spawn.rs  symbol_resolver.rs  taxonomy.rs  taxonomy.yaml  ws_server.rs
cli/src/policies/: air-gap.yaml  base.yaml  bash-install.yaml  comfyui.yaml  default.yaml  npm-install.yaml  openclaw.yaml  pip-install.yaml
cli/src/policy/: active.rs  analysis.rs  commands.rs  compiled.rs  compiler.rs  config.rs  detect.rs  engine.rs  files.rs  mod.rs  network.rs  parser.rs  presets.rs  taxonomy.rs  templates.rs  validate.rs  yaml.rs
cli/src/policy/engine_tests/: compilation_tests.rs  evaluation_tests.rs  mod.rs  parsing_tests.rs  pattern_tests.rs  validation_tests.rs
cli/src/policy/presets/: air-gap.yaml  bash-install.yaml  comfyui.yaml  default.yaml  npm-install.yaml  openclaw.yaml  pip-install.yaml  taxonomy.yaml
cli/src/policy/templates/: browser_data.yaml  commands_build_macos.yaml  commands_file_operation_macos.yaml  commands_package.yaml  commands_package_linux.yaml  commands_package_macos.yaml  commands_safe_macos.yaml  commands_threat.yaml  commands_threat_linux.yaml  container_escape.yaml  credential_files.yaml  credential_readers.yaml  dangerous_symbols.yaml  exfiltration.yaml  file_functions_native.yaml  filesystem_hardening.yaml  http_functions_nodejs.yaml  http_functions_python.yaml  interprocess_communication.yaml  mandatory_access_control.yaml  mod.rs  network_functions_python.yaml  reconnaissance.yaml  scripting.yaml  sensitive_envvars.yaml  shell_profiles.yaml  taxonomy.rs
cli/tests/: test_bash.rs  test_native.rs  test_nodejs.rs  test_policy.rs  test_python.rs
cli/tests/integration/: air_gap_tests.rs  arg_filter_tests.rs  bash_tests.rs  child_process_tests.rs  cross_runtime_tests.rs  daemon_tests.rs  direct_syscall_tests.rs  exec_filter_tests.rs  exploit_tests.rs  fork_net_tests.rs  http_tests.rs  native_tests.rs  nodejs_tests.rs  perf_tests.rs  policy_tests.rs  python_tests.rs  review_mode_tests.rs
cli/tests/integration/common/: mod.rs
docs/: rust.md  (+6 more)
intercept/: Cargo.toml  build.rs  capstone_helper.c
intercept/benches/: filter.rs
intercept/capstone/arch/ARC/: ARCModule.h
intercept/capstone/arch/ARM/: ARMModule.h
intercept/capstone/arch/Alpha/: AlphaModule.h
intercept/capstone/arch/BPF/: BPFModule.h
intercept/capstone/arch/EVM/: EVMModule.h
intercept/src/: agent.rs  client.rs  ffi.rs  gum.rs  http_client.rs  lib.rs  test_utils.rs  types.rs
intercept/src/agent/: lifecycle.rs  mod.rs
intercept/src/arch/: mod.rs
intercept/src/backtrace/: arm64.rs  mod.rs  x86_64.rs
intercept/src/bash/: detect.rs  hooks.rs  mod.rs  structs.rs
intercept/src/code/: allocator.rs  cache.rs  mod.rs  patcher.rs  ptrauth.rs
intercept/src/exec/: envvar.rs  fork.rs  mod.rs  spawn.rs
intercept/src/interceptor/: attach_arm64.rs  attach_x86_64.rs  invocation.rs  listener.rs  mod.rs  replace_arm64.rs  replace_x86_64.rs
intercept/src/module/: darwin.rs  linux.rs  mod.rs
intercept/src/native/: format.rs  hooks.rs  symbol.rs
intercept/src/nodejs/: bytecode.rs  codegen.rs  ffi.rs  filters.rs  format.rs  mod.rs  native_callbacks.rs  script.rs  stack.rs  state.rs  symbols.rs
intercept/src/python/: audit.rs  ffi.rs  filters.rs  format.rs  helpers.rs  hooks.rs  mod.rs  profile.rs  stack.rs
intercept/src/tracing/: dns.rs  event.rs  filter.rs  fork_mutex.rs  format.rs  mod.rs  stack.rs  thread.rs  time.rs
policy/: Cargo.toml
policy/src/: compiled.rs  compiler.rs  config.rs  decision.rs  engine.rs  error.rs  eval.rs  glob.rs  lib.rs  parser.rs  pattern.rs  resolved.rs  util.rs  validate.rs  yaml.rs
policy/src/compiler/: compiled.rs  engine.rs  error.rs  mod.rs  parser.rs  pattern.rs  resolve.rs  validate.rs  yaml.rs
policy/src/templates/: anti_tracing.yaml  anti_tracing_envvars.yaml  commands_build.yaml  commands_file_operation.yaml  commands_safe.yaml  commands_safe_linux.yaml  commands_text.yaml  commands_threat_macos.yaml  dangerous_symbols.yaml  debug_injection.yaml  file_functions_python.yaml  interpreters.yaml  kernel.yaml  keyrings.yaml  localhost_network.yaml  mod.rs  network_commands.yaml  network_functions_nodejs.yaml  network_functions_python.yaml  networking_symbols.yaml  nodejs_child_process.yaml  nodejs_code_execution.yaml  persistence_files.yaml  privilege_escalation.yaml  python_dangerous_imports.yaml  python_process_spawning.yaml  sensitive_envvars.yaml
policy/src/tests/: compilation_tests.rs  evaluation_tests.rs  parsing_tests.rs  pattern_tests.rs  validation_tests.rs
protocol/: Cargo.toml
protocol/benches/: serialization.rs
protocol/src/: agent_config.rs  agent_policy.rs  event.rs  exec.rs  glob.rs  lib.rs  message.rs  platform.rs  protocol.rs  wire.rs  yaml.rs
(+186 files in other folders)
