[workspace]
resolver = "2"
members = [
    "cli",
    "agent",
    "intercept",
    "protocol",
]

[workspace.package]
version = "0.0.29"
edition = "2021"
license = "MIT"
authors = ["malwi-trace contributors"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Platform APIs
libc = "0.2.178"
mach2 = "0.4"

# Async runtime (CLI only)
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
malwi-agent = { path = "agent" }
malwi-intercept = { path = "intercept", default-features = false }
malwi-protocol = { path = "protocol" }
