[build-system]
requires = ["maturin>=1.12"]
build-backend = "maturin"

[project]
name = "malwi"
version = "0.0.24"
description = "Function tracing tool for Python, JavaScript, and native code"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "malwi contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Debuggers",
]
keywords = ["tracing", "debugging", "profiling", "python", "javascript"]

[project.urls]
Homepage = "https://github.com/user/malwi-trace"
Repository = "https://github.com/user/malwi-trace"

[tool.maturin]
bindings = "bin"
python-source = "python"
data = "malwi.data"
manifest-path = "cli/Cargo.toml"
strip = true
