[package]
name = "malwi"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "malwi"
path = "src/main.rs"

[lib]
name = "malwi"
path = "src/lib.rs"
doctest = false

[dependencies]
malwi-intercept = { workspace = true, default-features = false }
malwi-policy.workspace = true
regex = "1.10"
clap.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = { version = "0.36", default-features = false, features = ["read"] }
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "symbol_resolver"
harness = false

[[bench]]
name = "throughput"
harness = false
