[package]
name = "malwi-intercept"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc.workspace = true
log.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mach2.workspace = true

[dev-dependencies]
anyhow.workspace = true

