[package]
name = "malwi-intercept"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
links = "frida-gum"
build = "build.rs"

[dependencies]
libc.workspace = true
log.workspace = true

[build-dependencies]
bindgen = "0.71"

[target.'cfg(target_os = "macos")'.dependencies]
mach2.workspace = true

[dev-dependencies]
anyhow.workspace = true
