[package]
name = "malwi-intercept"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
links = "frida-gum"
build = "build.rs"

[dependencies]
libc.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
malwi-protocol.workspace = true

[build-dependencies]
bindgen = "0.71"

[target.'cfg(target_os = "macos")'.dependencies]
mach2.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "filter"
harness = false
